--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!-- footer -->
             <footer> 
-                <h2>❤️ Made with love by Run Buddy</h2>
+                <h2>❤️ Made with love by Run Buddy.</h2>
             </footer>
 
         </body>
