--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </p>
             <p>
                 <label for="checkbox" >
-                    I ackknowledge that I am at least 18 years of age.
+                    I acknowledge that I am at least 18 years of age.
                 </label>
                 <input type="checkbox" name="age-confirm" id="checkbox" />
             </p>
