--- a/index.html
+++ b/index.html
@@ -153,6 +153,31 @@
     <!-- "reach out" section -->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.554599692003!2d-77.5135140846938!3d37.37671457983387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b10ba1933f6d87%3A0x651b7c1d06ce4870!2s9865%20Iron%20Bridge%20Rd%2C%20Chesterfield%2C%20VA%2023832!5e0!3m2!1sen!2sus!4v1637478097686!5m2!1sen!2sus" 
+            width="400"
+            height="400"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy">
+            </iframe>"
+        </div>
+        
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br/>
+                Let us know and we'll be happy to talk to you
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, CA <br/>
+                12345<br/>
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>    
     </section>
 
     <!-- footer -->
