--- a/index.html
+++ b/index.html
@@ -151,12 +151,10 @@
     </section>
 
     <!-- "reach out" section -->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.554599692003!2d-77.5135140846938!3d37.37671457983387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b10ba1933f6d87%3A0x651b7c1d06ce4870!2s9865%20Iron%20Bridge%20Rd%2C%20Chesterfield%2C%20VA%2023832!5e0!3m2!1sen!2sus!4v1637478097686!5m2!1sen!2sus" 
-            width="400"
-            height="400"
             style="border:0;"
             allowfullscreen=""
             loading="lazy">
@@ -168,7 +166,7 @@
             <p>
                 Any questions or concerns before signing up?
                 <br/>
-                Let us know and we'll be happy to talk to you
+                Let us know and we'll be happy to talk to you!
             </p>
             <address>
                 55 Main Street <br/>
