--- a/index.html
+++ b/index.html
@@ -154,13 +154,12 @@
     <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.554599692003!2d-77.5135140846938!3d37.37671457983387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b10ba1933f6d87%3A0x651b7c1d06ce4870!2s9865%20Iron%20Bridge%20Rd%2C%20Chesterfield%2C%20VA%2023832!5e0!3m2!1sen!2sus!4v1637478097686!5m2!1sen!2sus" 
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.554599692003!2d-77.5135140846938!3d37.37671457983387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b10ba1933f6d87%3A0x651b7c1d06ce4870!2s9865%20Iron%20Bridge%20Rd%2C%20Chesterfield%2C%20VA%2023832!5e0!3m2!1sen!2sus!4v1637478097686!5m2!1sen!2sus" 
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy">
             </iframe>"
-        </div>
-        
         <div>
             <h3>Run Buddy</h3>
             <p>
