--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>RUN BUDDY</title>
-
+    <link rel="shorcut icon" type="image/jpg" href="./assets/images/step-3.svg">
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -182,7 +182,7 @@
         <h2>❤️ Made with love by Run Buddy.</h2>
 
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
