--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 class="section-title secondary-border">What You Do</h2>
 
         <div>
-            <img src="./assets/images/step-1.svg" alt="" />
+            <img src="./assets/images/step-1.svg" alt="Fill out form" />
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
         </div>
