add content to ero, replace image

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             
     <!-- hero/jumbotron -->
     <section class="hero">
+        <div class="hero-cta">
+            <h2>Start Building habits</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta optio nobis ad fuga vel dignissimos. Expedita recusandae delectus consequatur maiores, esse magnam eligendi? Laboriosam ullam nam suscipit, fugiat ratione non.
+            </p>
+        </div>
+        
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -68,7 +75,7 @@
                 Get running!
             </button>
         </form>
-        </div>
+        </div>e3
     </section>
 
     <!-- "what we do" section -->
