--- a/index.html
+++ b/index.html
@@ -152,47 +152,49 @@
         </div>
 
     <!-- "meet the trainers" section-->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
         <div class="flex-row">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
-        </div>    
-        <article class="trainer">
-            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa tenetur, nisi magni unde nemo illum totam adipisci
-                    exercitationem, quasi facere possimus! Suscipit quasi quas autem, quam obcaecati minima libero ad.
-                </p>
-            </div>
-        </article>
+        </div> 
+        <div class="trainers">   
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa tenetur, nisi magni unde nemo illum totam adipisci
+                        exercitationem, quasi facere possimus! Suscipit quasi quas autem, quam obcaecati minima libero ad.
+                    </p>
+                </div>
+            </article>
         
-        <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis cumque voluptatum assumenda 
-                    exercitationem in harum, corrupti aut distinctio perspiciatis numquam sequi accusamus officia voluptates, totam est? Nulla quasi libero officia.
-                </p>
-            </div>
-            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-        </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis cumque voluptatum assumenda 
+                        exercitationem in harum, corrupti aut distinctio perspiciatis numquam sequi accusamus officia voluptates, totam est? Nulla quasi libero officia.
+                    </p>
+                </div>
+            </article>
 
-        <article class="trainer">
-            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tenetur laborum fugiat impedit 
-                    minima saepe non dolor amet velit consectetur, at aperiam iste earum. Nam culpa quaerat fuga in aut!
-                </p>
-            </div>
-        </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tenetur laborum fugiat impedit 
+                        minima saepe non dolor amet velit consectetur, at aperiam iste earum. Nam culpa quaerat fuga in aut!
+                    </p>
+                </div>
+            </article>
+        </div>
     </section>
 
     <!-- "reach out" section -->
