--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- hero/jumbotron -->
     <section class="hero">
         <div class="hero-cta">
-            <h2>Start Building habits</h2>
+            <h2>Start Building Habits</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta optio nobis ad fuga vel dignissimos. Expedita recusandae delectus consequatur maiores, esse magnam eligendi? Laboriosam ullam nam suscipit, fugiat ratione non.
             </p>
