--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RUN BUDDY</title>
     <link rel="shorcut icon" type="image/jpg" href="./assets/images/step-3.svg">
     <link rel="stylesheet" href="./assets/css/style.css" />
