--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 Get running!
             </button>
         </form>
-        </div>e3
+        </div>
     </section>
 
     <!-- "what we do" section -->
@@ -151,6 +151,7 @@
                 </div>
             </div>    
         </div>
+    </section>
 
     <!-- "meet the trainers" section-->
     <section id="your-trainers">
@@ -159,6 +160,7 @@
                 Meet The Trainers
             </h2>
         </div> 
+
         <div class="trainers">   
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -197,6 +199,7 @@
             </article>
         </div>
     </section>
+    <!-- "meet the trainers" end -->
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
