--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
     <!-- hero/jumbotron -->
     <section class="hero">
         <div class="hero-cta">
-            <h2>Start Building Habits</h2>
+            <h2>Start Building Habits.</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta optio nobis ad fuga vel dignissimos. Expedita recusandae delectus consequatur maiores, esse magnam eligendi? Laboriosam ullam nam suscipit, fugiat ratione non.
             </p>
         </div>
         <div class="hero-form">
             <h3>Get Started Today</h3>
-            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <p>Fill out this form and one of our trainers will schedule a consult.</p>
         <!-- Add form element -->
         <form>
-            <label for="name">Enter full name:</label>
+            <label for="name">Your Name</label>
             <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
             
-            <label for="email">Enter email address:</label>
+            <label for="email">Your Email</label>
             <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
             
-            <label for="phone">Enter a telephone number:</label>
+            <label for="phone">Phone Number</label>
             <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
             <p>
                 Have you worked out with a trainer before?
